# dify-openapi

./: .env.example  .gitignore  README.md  README.zh.md  justfile  pyproject.toml
.github/workflows/: ci.yml
configs/openapi-generator-config/: app.yaml  datasets.yaml
configs/openapi-python-client/: README.md  config.yaml
configs/openapi-python-client/templates/: literal_enum.py.jinja
doc/: CONTRIBUTING.md  CONTRIBUTING.zh.md  README.en.md
fern/: fern.config.json  generators.yml
fern/openapi/: app.en.yaml  knowledge_base.en.yaml
misc/: fern_sdk_hotfix_patch.py
misc/official_api_doc_changes/: 1.2.0__1.3.0.diff  1.3.0__1.3.1.diff  1.3.1__1.4.0.diff  1.4.0__1.4.1.diff  1.4.1__1.4.2.diff  1.4.2__1.4.3.diff  1.4.3__1.5.0.diff  1.5.0__1.5.1.diff  1.6.0__1.7.0.diff  1.7.1__1.7.2.diff
openapi/: dataset.zh.yaml
schema/: app.en.yaml  app.zh.yaml  app_advanced_chat.en.yaml  app_advanced_chat.zh.yaml  app_chat.en.yaml  app_chat.zh.yaml  app_generation.en.yaml  app_generation.zh.yaml  app_workflow.en.yaml  app_workflow.zh.yaml  datasets.en.yaml  datasets.zh.yaml  external_knowledge.zh.yaml  external_knowledge_base.en.yaml  external_knowledge_base.zh.yaml  knowledge_base.en.yaml  knowledge_base.zh.yaml
schema/overlays/: app.en.overlay.yaml  app_advanced_chat.en.overlay.yaml  app_chat.en.overlay.yaml  app_generation.en.overlay.yaml  app_workflow.en.overlay.yaml  datasets.en.overlay.yaml  external_knowledge.en.overlay.yaml  external_knowledge_base.en.overlay.yaml  knowledge_base.en.overlay.yaml
scripts/: detect-chinese-char-in-files.py  dev-updater.py  gen_diff_by_versions.py  preview-schema.py  prompt-generater.py  simple_server.py
src/dify_openapi_app/: README.md  __init__.py
src/dify_openapi_app/models/: __init__.py  base_message.py  base_message_metadata.py  chat_message.py  completion_message.py  conversation.py  conversation_inputs.py  delete_conversations_conversation_id_body.py  delete_conversations_conversation_id_response_200.py  delete_conversations_conversation_id_response_200_result.py  error.py  file_input.py  file_input_transfer_method.py  file_input_type.py  get_conversations_response_200.py  get_conversations_sort_by.py  get_info_response_200.py  get_messages_response_200.py  get_parameters_response_200.py  get_parameters_response_200_annotation_reply.py  get_parameters_response_200_file_upload.py  get_parameters_response_200_retriever_resource.py  get_parameters_response_200_speech_to_text.py  get_parameters_response_200_suggested_questions_after_answer.py  get_parameters_response_200_system_parameters.py  get_parameters_response_200_user_input_form_item.py  post_audio_to_text_body.py  post_audio_to_text_response_200.py  post_chat_messages_body.py  post_chat_messages_body_inputs.py  post_chat_messages_body_response_mode.py  post_completion_messages_body.py  post_completion_messages_body_inputs.py  post_completion_messages_body_response_mode.py  post_conversations_conversation_id_name_body.py  post_files_upload_body.py  post_messages_message_id_feedbacks_body.py  post_messages_message_id_feedbacks_body_rating_type_1.py  post_messages_message_id_feedbacks_response_200.py  (+16 more)
src/dify_openapi_datasets/: README.md  __init__.py
src/dify_sdk/: __init__.py  client.py
src/dify_sdk_testing/: __init__.py
tests/: conftest.py
tests/app/: test_advanced_chat_api.py  test_annotations_api.py  test_annotations_api_updates.py  test_api.py  test_apis.py  test_completion_api.py  test_conversation_variables_api.py  test_workflow_api.py
tests/core/: test_api_error.py  test_client_wrapper.py  test_datetime_utils.py  test_file.py  test_jsonable_encoder.py  test_query_encoder.py  test_remove_none_from_dict.py  test_request_options.py  test_serialization.py
tests/datasets/: test_datasets_api.py  test_documents_api.py  test_segments_api.py
tests/knowledge_base/: test_child_chunks_api.py  test_dataset_details_api.py  test_datasets_api.py  test_documents_api.py  test_embedding_models_api.py  test_metadata_api.py  test_segments_api.py  test_tags_api.py
(+704 files in other folders)
