[project]
name = "dify-openapi"
version = "1.0.0"
description = "a client for testing and validating dify openapi schema"
readme = "README.md"
authors = [{ name = "straydragon", email = "straydragonl@foxmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.20.0,<0.29.0",
    "attrs>=22.2.0",
    "python-dateutil>=2.8.0",
]

[dependency-groups]
dev = [
    "ipython>=8.18.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dify_openapi_app", "src/dify_openapi_datasets"]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--showlocals -x --cov=src --cov-branch --cov-report=xml" # --cov-report=term-missing
